smarketing-ai/deployment/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smarketing-service
  namespace: smarketing
  labels:
    app: smarketing
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
    name: http
  selector:
    app: smarketing
